Edited wiki page CR_JumpToType through web user interface.

--- a/wiki/CR_JumpToType.wiki
+++ b/wiki/CR_JumpToType.wiki
@@ -1,4 +1,4 @@
-#summary Moved to GitHub - A Plugin to allow you to "Tab" between the attributes (and their values) contained within a html or xml tag.
+#summary Moved to GitHub
 
 = This Plugin Has Moved =
 
