--- a/wiki/CR_Disposomatic.wiki
+++ b/wiki/CR_Disposomatic.wiki
@@ -1,32 +1,9 @@
-#summary Provides a 2 CodeProviders and  CodeIssues which will warn of, and correct, missing implementations of IDisposable.
-[http://www.rorybecker.co.uk/DevExpress/Community/Plugins/CR_Dispos-o-matic/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
-[http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
-===== Requires DXCore 11.1 =====
-=== Introduction ===
-Provides: 
-  * 2 !CodeIssues 
-    * Class should Implement IDisposable
-    * Fields should be Disposed
-  * 2 !CodeProviders 
-    * Implement IDisposable
-    * Dispose Fields.
+#summary Moved to GitHub
 
-=== Usage ===
+= This Plugin Has Moved =
 
-==== Scenario 1 ==== 
-A class which *does not* implement IDisposable, but which has fields of types which do.
+This plugin and it's source have moved to github.
 
-The _Class should Implement IDisposable_ !CodeIssue highlights the class and provides the _Implement IDisposable_ !CodeProvider as a fix.
+The new address for this plugin is [https://github.com/RoryBecker/CR_Disposomatic https://github.com/RoryBecker/CR_Disposomatic]
 
-The _Implement IDisposable_ !CodeProvider implements IDisposable interface and disposes of all disposable fields appropriately in the newly created Dispose method.
-
-==== Scenario 2 ==== 
-A class which *does* implement IDisposable, but which has some Disposable fields which are *Not* disposed
-
-The _Fields Should be Disposed_ !CodeIssue highlights undisposed disposable fields in any class which does implement IDisposable. 
-
-The _Dispose Fields_ !CodeProvider adds code to the Dispose method of the class which Disposes any undisposed fields
-
-=== Credits ===
-
-Author: [http://devexpress.com/mark/ Mark Miller]
+The latest release [https://github.com/RoryBecker/CR_Disposomatic/releases/latest can be found here] 
