--- a/wiki/CR_ElementTagTabber.wiki
+++ b/wiki/CR_ElementTagTabber.wiki
@@ -1,28 +1,9 @@
-#summary Plugin to allow tabbing between start and end tags in html or xml documents.
-[http://www.rorybecker.co.uk/DevExpress/Community/Plugins/CR_ElementTagTabber/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
-[http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
-===== Build using !CodeRush 11.1 =====
-=== Introduction ===
-This plugin allows you to use the existing !TabToNextReference functionality to navigate between the an open and close pair of tags.
+#summary Moved to GitHub
 
-=== Additional Configuration ===
-In addition to downloading and installing the plugin dll, you will need to adjust the context of the *Tab* and *Shift+Tab* shortcuts in order to make this work.
+= This Plugin Has Moved =
 
-Here are the steps needed to achieve this:
+This plugin and it's source have moved to github.
 
-  * !DevExpress\Options (Or Ctrl+Shift+Alt+O)
-  * IDE\Shortcuts
-  * Navigation\References\NavFields
-  * Highlight the *Tab* shortcut
-  * Locate the *Editor\Code\!InPairedHtmlElementNameTag*
-  * Ensure that this context is ticked.
-  * Repeat previous steps for the *Shift+Tab* shortcut
+The new address for this plugin is [https://github.com/RoryBecker/CR_ElementTagTabber https://github.com/RoryBecker/CR_ElementTagTabber]
 
-
-=== Usage ===
-Place your caret on either the open or close tag of some HTML or XML and then hit Tab. Your caret will jump to the opposing tag ready for whatever additional work you wish to engage in. This can be particularly useful when navigating around large XML documents.
-
-http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_ElementTagTabber/Screenshots/TTNR-HTML.gif
-=== Credits ===
-
-Author: [http://devexpress.com/mark Mark Miller] 
+The latest release [https://github.com/RoryBecker/CR_ElementTagTabber/releases/latest can be found here] 
