Edited wiki page CR_EnforceNamingConventions through web user interface.

--- a/wiki/CR_EnforceNamingConventions.wiki
+++ b/wiki/CR_EnforceNamingConventions.wiki
@@ -1,35 +1,9 @@
-#summary Provides action to alter naming convention of members.
-[http://www.rorybecker.co.uk/DevExpress/Community/Plugins/CR_EnforceNamingConventions/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
-[http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
-===== Built using !CodeRush 11.1 =====
-=== Introduction ===
-This plugin is an example of how to apply a naming convention across your solution.
+#summary Moved to GitHub
 
-The specific naming convention will perform 3 operations:
- * Remove any underscore prefixing.
- * Change non-public fields to have a lowercase first letter.
- * Change other members to have an uppercase first letter.
+= This Plugin Has Moved =
 
-=== Usage ===
-Simply pick the 'Enforce Naming Convention' option from the DevExpress menu.
+This plugin and it's source have moved to github.
 
-*Note:* You may also [http://community.devexpress.com/blogs/rorybecker/archive/2010/10/05/binding-keys-in-coderush.aspx bind a key] to the 'Enforce Naming Convention' command, and invoke the action this way
+The new address for this plugin is [https://github.com/RoryBecker/CR_EnforceNamingConventions https://github.com/RoryBecker/CR_EnforceNamingConventions]
 
-http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_EnforceNamingConventions/Screenshots/EnforceNamingConventions.png
-
-The plugin will then iterate through your solution, adjusting the name of every member of every type in accordance with the stated naming convention.
-
-All references to these members will of course be altered as well.
-
-Once all renames are complete, summary details of operations performed are displayed in the status bar.
-
-http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_EnforceNamingConventions/Screenshots/RenamedMembers.png
-
-Alternatively, if no alterations were required, then this is also noted.
-
-http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_EnforceNamingConventions/Screenshots/AllMembersCorrectlyNamed.png
-
-
-=== Credits ===
-
-Author: [http://devexpress.com/mark Mark Miller] 
+The latest release [https://github.com/RoryBecker/CR_EnforceNamingConventions/releases/latest can be found here] 
