Edited wiki page CR_ReverseBoolean through web user interface.

--- a/wiki/CR_ReverseBoolean.wiki
+++ b/wiki/CR_ReverseBoolean.wiki
@@ -1,21 +1,9 @@
-#summary Reverses the logical meaning of a boolean variable without changing program behavior.
-[http://www.rorybecker.co.uk/DevExpress/Community/Plugins/CR_ReverseBoolean/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
-[http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
-===== Build with 11.1.8 =====
-=== Introduction ===
-Reverses the logical meaning of a boolean variable without changing program behavior.
+#summary Moved to GitHub
 
-http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_ReverseBoolean/Screenshots/CR_ReverseBoolean.png
+= This Plugin Has Moved =
 
-This is useful if you want to rename a Boolean variable to it's opposite intended meaning.( eg 'missing' -> 'found')
+This plugin and it's source have moved to github.
 
-This refactoring reverses all assignments and references and removes any resulting double negations.
+The new address for this plugin is [https://github.com/RoryBecker/CR_ReverseBoolean https://github.com/RoryBecker/CR_ReverseBoolean]
 
-=== Usage ===
-Place your caret on a variable whose type is bool/Boolean and invoke "Reverse Boolean" via the refactor menu.
-
-
-
-=== Credits ===
-
-Author: [http://devexpress.com/mark Mark Miller] 
+The latest release [https://github.com/RoryBecker/CR_ReverseBoolean/releases/latest can be found here] 
