--- a/wiki/CR_SuperSiblingNav.wiki
+++ b/wiki/CR_SuperSiblingNav.wiki
@@ -1,35 +1,9 @@
-[http://www.rorybecker.co.uk/DevExpress/Community/Plugins/CR_SuperSiblingNav/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
-[http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
-===== Requires DXCore 10.1  =====
-=== Introduction ===
-Provides 2 additional Navigation providers which allow you to skip between sibling methods and properties whilst retaining relative selection and/or caret position
+#summary Moved to GitHub
 
-=== Config ===
-Simply [http://community.devexpress.com/blogs/rorybecker/archive/2010/10/05/binding-keys-in-coderush.aspx bind some shortcut keys] to *Navigate(Member Next)* and *Navigate(Member Previous)* noting the contexts below.
+= This Plugin Has Moved =
 
-http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_SuperSiblingNav/Screenshots/SuperSiblingNavShortcuts.png
+This plugin and it's source have moved to github.
 
-(Note: The bits in brackets needs to go in the Parameters box.)
+The new address for this plugin is [https://github.com/RoryBecker/CR_SuperSiblingNav https://github.com/RoryBecker/CR_SuperSiblingNav]
 
-http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_SuperSiblingNav/Screenshots/AddShortcutNavigateMemberPrevious.png
-
-=== Usage ===
-Place your caret within a method or property and activate either *Navigate(Member next)* or *Navigate(Member)* as per your configuration.
-
-See how when you select a method name and navigate away, the selection jumps to the next method name. Note: This will even work with methods of different length names.
-
-http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_SuperSiblingNav/Screenshots/SuperSiblingNavMethodName.gif
-
-See how the appropriate parameter is also maintained when moving from member to member. Note that this even adjusts for when the members don't have sufficient parameters.
-
-http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_SuperSiblingNav/Screenshots/SuperSiblingNavParameters.gif
-
-See how this even works with statements.
-
-http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_SuperSiblingNav/Screenshots/SuperSiblingNavStatements.gif
-
-Essentially CR_!SuperSiblingNav works to place you in a similar position to that which you started, only relative to the new sibling rather than the old one.
-
-=== Credits ===
-
-Author: [http://devexpress.com/mark Mark Miller] 
+The latest release [https://github.com/RoryBecker/CR_SuperSiblingNav/releases/latest can be found here] 
