--- a/wiki/MarkersToolWindow.wiki
+++ b/wiki/MarkersToolWindow.wiki
@@ -1,16 +1,9 @@
-#summary Provides a toolwindow for visualizing the current stack of Markers
-[http://www.rorybecker.co.uk/DevExpress/Community/Plugins/MarkersToolWindow/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
-[http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
-===== Requires DXCore 10.2 since build 1724=====
-=== Introduction ===
-This plugin provides an additional tool window which shows the current stack of Markers within the system
+#summary Moved to GitHub
 
-It updates itself when Markers are added or removed, and allows navigation via a double-click
+= This Plugin Has Moved =
 
-Additionally a preview of the code in which a Marker sits is available.
+This plugin and it's source have moved to github.
 
-[http://dxcorecommunityplugins.googlecode.com/svn/trunk/MarkersToolWindow/Screenshots/MarkersToolWindow.png]
+The new address for this plugin is [https://github.com/RoryBecker/CR_MarkersToolWindow https://github.com/RoryBecker/CR_MarkersToolWindow]
 
-=== Credits ===
-
-Author: [http://devexpress.com/Mark MarkMiller]
+The latest release [https://github.com/RoryBecker/CR_MarkersToolWindow/releases/latest can be found here] 
