--- a/wiki/CR_Loop.wiki
+++ b/wiki/CR_Loop.wiki
@@ -1,22 +1,9 @@
-#summary Provides a TextCommand (Loop) which expands a template multiple times.
-[http://www.rorybecker.co.uk/DevExpress/Community/Plugins/CR_Loop http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
-[http://tv.devexpress.com/CRLoopTextCommand.movie http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Screencast.png]
-[http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
+#summary Moved to GitHub
 
-===== Requires DXCore 10.2 since build 1550 =====
-=== Introduction ===
-Provides a !TextCommand (Loop) which expands a template multiple times. This plugin was initially created in response to a customer suggestion and was [http://community.devexpress.com/blogs/markmiller/archive/2011/01/06/wpf-amp-silverlight-grids-faster-creation-using-coderush-templates-and-a-custom-plug-in.aspx blogged about by Mark Miller here]
+= This Plugin Has Moved =
 
-=== Usage ===
-Use the following syntax in Templates and other places where !TextCommands are appropriate
+This plugin and it's source have moved to github.
 
-*«Loop(!TemplateName,Count,Offset)»*
+The new address for this plugin is [https://github.com/RoryBecker/CR_Loop https://github.com/RoryBecker/CR_Loop]
 
-Reference iteration value from within a template using the *«?!LoopIterationValue»* !StringProvider
-
-!TemplateName: Name of template to repeat.
-Count: Number of iterations.
-Offset: Numeric value to add to *«?!LoopIterationValue»* before returning it.
-
-=== Credits ===
-Written by [http://community.devexpress.com/blogs/markmiller/default.aspx Mark Miller]
+The latest release [https://github.com/RoryBecker/CR_Loop/releases/latest can be found here] 
