Edited wiki page CR_MetricShader through web user interface.

--- a/wiki/CR_MetricShader.wiki
+++ b/wiki/CR_MetricShader.wiki
@@ -1,58 +1,9 @@
-#summary Alters the background color of members to indicate status according to a nominated Metric.
+#summary Moved to GitHub
 
-[http://www.rorybecker.co.uk/DevExpress/Community/Plugins/CR_MetricShader/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://tv.devexpress.com/CRMetricShader.movie http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Screencast.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
-[http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
+= This Plugin Has Moved =
 
-= Introduction =
+This plugin and it's source have moved to github.
 
-This plugin changes the background color of your class's members to indicate how well they adhere to a nominated metric.
+The new address for this plugin is [https://github.com/RoryBecker/CR_MetricShader https://github.com/RoryBecker/CR_MetricShader]
 
-Members that stack up well, remain white. The colors traffic light inspired colors show  Green, Orange, Red as the Metric value goes up.
-
-http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_MetricShader/Screenshots/Example.png
-
-Each metric has a numeric value which is said to be the Warning Value.
- * 0-25% = White.
- * 25-50% = Green.
- * 50-75% = Orange.
- * 75%+ = Red.
-
-In the screenshot above I am using a Demo Metric which counts the number of lines in the member and has the Warning Value set to 15. This is a useless metric created (within this plugin) purely for the purposes of being able to create this screenshot.
-
-== Options ==
-The options screen allows you to pick from any Metric (that does its calcs on members) within CodeRush and displays it's Warning value alongside the dropdown.
-
-Additionally you can change any of the colors, opacities of those colors or the boundaries by which the logic works.
-
-You can also enable/disable the plugin entirely.
-
-http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_MetricShader/Screenshots/Options563.png
-
-== Usage ==
-
- * Devexpress\Options (CTRL+ALT+SHIFT+O) 
- * Editor\Painting\Metric Shader
- * Pick your metric and GO.
-
-== History ==
- * Build 563
-   * Now allows an alternate mode where a single nominated color is used with different levels of opacity to indicate poorness of metric compliance.
- * Build 556
-   * Color, Opacity and Boundary Percentages now customizable.
- * Build 553
-   * Adds an Enable/Disable option
- * Build 546 
-   * Perf: White is no longer actively painted.
-   * Perf: No member whose range falls outside the viewable screen will now be painted.
-
-== Additional Screenshots ==
-
-Apparently CR_MetricShader looks good on a dark scheme also :)
-
-http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_MetricShader/Screenshots/DarkExample.png
-
-== Credits ==
-
-Rory Becker [contact me on twitter(@rorybecker) or via email (Rorybecker@gmail.com)]
-
-NB: I have recently been looking back through some shared Google docs and have found evidence suggesting the original idea for this plugin was that of Dan Gilkerson (<- Great Bloke) 
+The latest release [https://github.com/RoryBecker/CR_MetricShader/releases/latest can be found here] 
