Edited wiki page CR_PromoteExpressionToParameter through web user interface.

--- a/wiki/CR_PromoteExpressionToParameter.wiki
+++ b/wiki/CR_PromoteExpressionToParameter.wiki
@@ -1,4 +1,5 @@
-#summary Provides a new "Promote (Expression) To Parameter" Refactoring
+#summary Moved to GitHub
+
 = This Plugin Has Moved =
 
 This plugin and it's source have moved to github.
