--- a/wiki/CR_MultiSelect.wiki
+++ b/wiki/CR_MultiSelect.wiki
@@ -1,41 +1,9 @@
-[http://www.rorybecker.co.uk/DevExpress/Community/Plugins/CR_MultiSelect/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
-[http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
-===== Tested under DXCore 11.1 =====
+#summary Moved to GitHub
 
-== Warning ==
+= This Plugin Has Moved =
 
-*This plugin now ships natively with !CodeRush 11.2 and higher. It remains here as an example only.*
+This plugin and it's source have moved to github.
 
-=== Introduction ===
-This awesome plugin allows you to define and use multiple selections instead of the normal singular selection supported by Windows natively.
+The new address for this plugin is [https://github.com/RoryBecker/CR_MultiSelect https://github.com/RoryBecker/CR_MultiSelect]
 
-=== Additional Configuration === 
-
-You will need to [http://community.devexpress.com/blogs/rorybecker/archive/2010/10/05/binding-keys-in-coderush.aspx bind some shortcut keys] to make this plugin useful.
-
-We suggest binding...
-
- * Ctrl + !NumEnter = !MultiSelectAdd
- * Ctrl + !NumDel   = !MultiSelectClear
- * Ctrl + !NumMinus = !MultiSelectUndo
- * Ctrl + !NumPlud  = !MultiSelectRedo
-
-=== Usage === 
-Assuming that you've setup the keys as directed above..
-
- * Defining Multiple Selections.
-   * Highlight come text
-   * Use Ctrl + !NumEnter to add a !MultiSelect selection.
-   * Repeat the first 2 steps as needed.
-
- * Use Ctrl + !NumMinus to remove the most recently created selection.
-
-Once you have defined your selections, you may either Cut or Copy those selections to the clipboard.
-
-This clipboard content may be pasted anywhere in Windows where text could normally be entered.
-
-For more details see [http://community.devexpress.com/blogs/rorybecker/archive/2011/09/20/new-plugin-cr-multiselect.aspx this blogpost]
-
-=== Credits ===
-
-Author: [http://devexpress.com/mark Mark Miller] 
+The latest release [https://github.com/RoryBecker/CR_MultiSelect/releases/latest can be found here] 
